--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,12 @@
             "name": "http://127.0.0.1:3019/index.html",
             "request": "launch",
             "url": "http://127.0.0.1:3019/index.html"
+        },
+        {
+            "type": "pwa-chrome",
+            "name": "http://127.0.0.1:3013/index.html",
+            "request": "launch",
+            "url": "http://127.0.0.1:3013/index.html"
         }
     ]
 }
